--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-image: url(images/medium-resolution-nature.jpg);
+    background-image: url(https://sucil-kumar-s-dev.github.io/Weather-Site/images/medium-resolution-nature.jpg);
     margin: 0;
     display: flex;
     justify-content: center;
